--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   php:
     build:
@@ -20,16 +22,14 @@ services:
       context: ./nginx
     container_name: laundry_nginx
     ports:
-      - "443:443"
       - "80:80"
     volumes:
       - ./src:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - php
     healthcheck:
-      test: ["CMD-SHELL", "curl --silent --show-error --fail --insecure https://laundry.test/up || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost/up || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
