--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,26 +1,9 @@
-# Redirect HTTP to HTTPS
 server {
     listen 80;
-    listen [::]:80;
-    server_name laundry.test;
-    return 301 https://$host$request_uri;
-}
+    server_name _;
 
-# HTTPS server
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-
-    server_name laundry.test;
     root /var/www/html/public;
-
     index index.php index.html;
-
-    ssl_certificate     /etc/nginx/ssl/laundry.test.crt;
-    ssl_certificate_key /etc/nginx/ssl/laundry.test.key;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
